# mercy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dev.yml  main.yml  workflow.yml
src/: lib.rs  main.rs
tests/: tests.rs
tests/assets/: test.hex
