[package]
name = "mercy"
description = "Mercy is an open-source Rust crate and CLI for building cybersecurity tools, assessment projects, and testing infrastructure."
version = "1.2.20"
edition = "2021"
author = "azazelm3dj3d"
license = "BSD-2-Clause"
categories = ["cryptography", "command-line-utilities", "encoding"]
keywords = ["cybersecurity", "decode", "encode", "cracking"]
repository = "https://github.com/azazelm3dj3d/mercy"

[dependencies]
base64 = "0.13.0"
sha2 = "0.10"
md5 = "0.7.0"
hexdump = "0.1.1"
sys-info = "0.9.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
prettytable-rs = "0.10.0"