[package]
name = "mercy"
description = "Mercy is an open-source Rust crate and CLI for building cybersecurity tools, assessment projects, and testing infrastructure."
version = "2.0.2"
edition = "2021"
author = "battleoverflow"
license = "BSD-2-Clause"
categories = ["cryptography", "command-line-utilities", "encoding"]
keywords = ["cybersecurity", "decode", "encode", "cracking"]
repository = "https://github.com/battleoverflow/mercy"

[dependencies]
base64 = "0.13.0"
sha2 = "0.10"
md5 = "0.7.0"
hexdump = "0.1.1"
sys-info = "0.9.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
prettytable-rs = "0.10.0"
lemmeknow = "0.7"
project_ares = "0.9.0"
zip = "0.6.4"
whatlang = "0.16.2"
mailparse = "0.14.0"